--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http:
+  http: # Add this line
+  bloc: ^8.1.0 # Add this line
+  flutter_bloc: ^8.0.1 # Add this line
 
 dev_dependencies:
   flutter_test:
